# buidl

./: .git-blame-ignore-revs  Cargo.toml  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: fixed_bytes.rs  lib.rs  utils.rs
derive/tests/: fixed_bytes.rs
src/: lib.rs
