[package]
name = "buidl"
version = "0.2.0"
description = "Primitive types for blockchain protocols"
authors = ["Jeeyong Um <conr2d@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/conr2d/buidl.git"
documentation = "https://docs.rs/buidl"

[dependencies]
buidl-derive = { version = "0.2", path = "derive", optional = true }

[features]
default = ["std", "derive"]
derive = ["buidl-derive"]
std = []

[workspace]
members = ["derive"]
