[package]
name = "buidl-derive"
version = "0.2.0"
description = "Custom derive for buidl"
authors = ["Jeeyong Um <conr2d@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/conr2d/buidl.git"
documentation = "https://docs.rs/buidl-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12" }
scale-info = "2.11.3"
sp-core = "32.0.0"
sp-runtime-interface = "27.0.0"
